改用fastjson解析json，使用commons-codec加密和解密